Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129425

Unused signals in 2D side

XMLWordPrintable

    • 9a057632b (dev), 88becb5ee (6.9), ba2bd7779 (6.8)

      There are couple of signals which are never emitted anywhere.

       

      In barSeries: barSetsChanged.

      In BarSet: countChanged.

      In graphsView: axisXChanged and axisYChanged

       

        For Gerrit Dashboard: QTBUG-129425
        # Subject Branch Project Status CR V

            nikokorkala Niko Korkala
            nikokorkala Niko Korkala
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes