Add unused signals to be emitted

barSetsChanged is now emitted when we append, remove, clear, take, insert or replace
countChanged is now emitted when we append, remove, clear or insert
X and Y axisChanged are now emitted when its setter function is called

Fixes: QTBUG-129425
Pick-to: 6.8
Change-Id: Id7b21592ec38441bec100963cece0ceca33ed5c1
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 9a057632b78d70157657cb378d26f15fc556e22c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>