src/graphs2d/barchart/qbarseries.cpp
@@ -617,6 +617,7 @@ bool QBarSeries::append(QBarSet *set)
         set->setParent(this);
         QObject::connect(set, &QBarSet::update, this, &QBarSeries::update);
         emit barsetsAdded(sets);
+        emit barSetsChanged();
         emit countChanged();
         emit update();
     }
@@ -637,6 +638,7 @@ bool QBarSeries::remove(QBarSet *set)
         set->setParent(0);
         QObject::disconnect(set, &QBarSet::update, this, &QBarSeries::update);
         emit barsetsRemoved(sets);
+        emit barSetsChanged();
         emit countChanged();
         emit update();
         delete set;
@@ -661,6 +663,7 @@ bool QBarSeries::take(QBarSet *set)
         sets.append(set);
         QObject::disconnect(set, &QBarSet::update, this, &QBarSeries::update);
         emit barsetsRemoved(sets);
+        emit barSetsChanged();
         emit countChanged();
         emit update();
     }
@@ -686,6 +689,7 @@ bool QBarSeries::append(const QList<QBarSet *> &sets)
     }
 
     emit barsetsAdded(sets);
+    emit barSetsChanged();
     emit countChanged();
     emit update();
     return true;
@@ -705,6 +709,7 @@ bool QBarSeries::insert(qsizetype index, QBarSet *set)
         sets.append(set);
         QObject::connect(set, &QBarSet::update, this, &QBarSeries::update);
         emit barsetsAdded(sets);
+        emit barSetsChanged();
         emit countChanged();
         emit update();
     }
@@ -721,6 +726,7 @@ void QBarSeries::clear()
     bool success = d->remove(sets);
     if (success) {
         emit barsetsRemoved(sets);
+        emit barSetsChanged();
         emit countChanged();
         for (QBarSet *set : sets) {
             QObject::disconnect(set, &QBarSet::update, this, &QBarSeries::update);
